# deez-notes

./: .env  .gitignore  Cargo.toml  dev.sh
backend/: Cargo.toml
backend/.sqlx/: query-4f45c5439571cbb80780413fdf509f2cec7c4a59e1940495ee16a18366921faf.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-d4de8f5f804f721ffee589ea2a4cfef8500426de1c04d2186382af93f3d002a3.json
backend/migrations/: 20240813154304_init.down.sql  20240813154304_init.up.sql
backend/src/: controllers.rs  error.rs  main.rs  models.rs  session.rs
backend/src/routes/: login.rs  mod.rs  notes.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: edit.rs  home.rs  login.rs  main.rs  nav.rs  note.rs  register.rs
