[package]
name = "deez-notes-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
jwt-simple = "0.12.9"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = ["bigdecimal", "postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.39.2", features = ["full"] }
tower-cookies = "0.10.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = "1.10.0"
