[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
console_error_panic_hook = "0.1.7"
dotenv = "0.15.0"
gloo-storage = "0.3.0"
lazy_static = "1.5.0"
leptos = { version = "0.6.14", features = ["csr"] }
leptos_meta = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
wasm-cookies = "0.2.1"
